--- a/AngularV17/curso-angular-lista-tarefas/src/app/modules/to-do-list/pages/list/list.component.scss
+++ b/AngularV17/curso-angular-lista-tarefas/src/app/modules/to-do-list/pages/list/list.component.scss
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
 
-    .btn-primary, div {
+    .btn-primary, app-input-add-item {
       margin-top: 30px;
       width: 100%;
     }
