Persistindo dados no local storage.

--- a/AngularV17/curso-angular-lista-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/AngularV17/curso-angular-lista-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
@@ -6,10 +6,12 @@
   />
 
   @if (addItem()) {
-    <button class="btn btn-primary" (click)="addItem.set(false)">
-      Crie uma lista de tarefas
-    </button>
+  <button type="button" class="btn btn-primary" (click)="addItem.set(false)">
+    Crie uma lista de tarefas
+  </button>
   } @else {
-    <app-input-add-item />
+  <app-input-add-item (outputAddListItem)="getInputAndAddItem($event)" />
   }
 </div>
+
+{{ getListItems() }}
