--- a/AngularV17/curso-angular-lista-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/AngularV17/curso-angular-lista-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
@@ -1,3 +1,4 @@
+@if (!getListItems().length) {
 <div class="container">
   <img
     src="assets/img/task-list-null.png"
@@ -10,8 +11,41 @@
     Crie uma lista de tarefas
   </button>
   } @else {
-  <app-input-add-item (outputAddListItem)="getInputAndAddItem($event)" />
+  <app-input-add-item
+    [inputListItems]="getListItems()"
+    (outputAddListItem)="getInputAndAddItem($event)"
+  />
   }
 </div>
+} @else {
+<app-input-add-item
+  [inputListItems]="getListItems()"
+  (outputAddListItem)="getInputAndAddItem($event)"
+/>
 
-{{ getListItems() }}
+<main class="container">
+  @if (listItemsStage('pending').length) {
+  <h2>Pendências</h2>
+  <app-input-list-item
+    [inputListItems]="listItemsStage('pending')"
+    (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
+    (outputUpdateItemText)="updateItemText($event)"
+    (outputDeleteItemText)="deleteItemText($event)"
+  />
+  } @if (listItemsStage('completed').length) {
+  <h2>Concluídas</h2>
+  <app-input-list-item
+    [inputListItems]="listItemsStage('completed')"
+    (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
+    (outputUpdateItemText)="updateItemText($event)"
+    (outputDeleteItemText)="deleteItemText($event)"
+  />
+  }
+</main>
+
+<footer>
+  <button type="button" class="btn btn-danger" (click)="deleteAllItems()">
+    Deletar todos os itens
+  </button>
+</footer>
+}
