Ajustes finos do projeto.

--- a/AngularV17/curso-angular-lista-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/AngularV17/curso-angular-lista-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
@@ -30,7 +30,7 @@
     [inputListItems]="listItemsStage('pending')"
     (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
     (outputUpdateItemText)="updateItemText($event)"
-    (outputDeleteItemText)="deleteItemText($event)"
+    (outputDeleteItem)="deleteItem($event)"
   />
   } @if (listItemsStage('completed').length) {
   <h2>Concluídas</h2>
@@ -38,7 +38,7 @@
     [inputListItems]="listItemsStage('completed')"
     (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
     (outputUpdateItemText)="updateItemText($event)"
-    (outputDeleteItemText)="deleteItemText($event)"
+    (outputDeleteItem)="deleteItem($event)"
   />
   }
 </main>
