--- a/AngularV17/meu-primeiro-projeto-latest/src/app/components/forms/reactive-forms/reactive-forms.component.html
+++ b/AngularV17/meu-primeiro-projeto-latest/src/app/components/forms/reactive-forms/reactive-forms.component.html
@@ -10,12 +10,27 @@
   <button type="button" (click)="updateName()">Update Name</button>
 </form> -->
 
-<form [formGroup]="profileForm">
+<form [formGroup]="profileForm" (ngSubmit)="submit()">
   <label>
     Nome:
     <input type="text" formControlName="name" />
-    <p>{{ profileForm.value.name }}</p>
   </label>
+
+  <hr />
+  <h3>[formGroup] = profileForm</h3>
+  <p>value: {{ profileForm.value | json }}</p>
+  <p>valid: {{ profileForm.valid | json }}</p>
+  <p>dirty: {{ profileForm.dirty | json }}</p>
+  <p>touched: {{ profileForm.touched | json }}</p>
+  <hr />
+
+  <h3>[formControlName] = name</h3>
+  <p>value: {{ profileForm.get("name")?.value }}</p>
+  <p>valid: {{ profileForm.get("name")?.valid }}</p>
+  <p>errors: {{ profileForm.get("name")?.errors | json }}</p>
+  <p>dirty: {{ profileForm.get("name")?.dirty }}</p>
+  <p>touched: {{ profileForm.get("name")?.touched }}</p>
+  <hr />
 
   <div formGroupName="myStacks">
     <label>
@@ -55,4 +70,6 @@
     <br />
     }
   </div>
+
+  <button [disabled]="!profileForm.valid">Submit</button>
 </form>
