--- a/AngularV17/meu-primeiro-projeto-latest/src/app/components/animations/animations.component.html
+++ b/AngularV17/meu-primeiro-projeto-latest/src/app/components/animations/animations.component.html
@@ -6,3 +6,17 @@
 <br />
 <button (click)="moveIn.set('move-left')">Move Left</button>
 <button (click)="moveIn.set('move-right')">Move Right</button>
+
+<hr>
+
+moveIn: {{ moveIn() }}
+
+<hr>
+
+<button (click)="addNewItem()">Add</button>
+
+<ul [@list-items]="listItems().length">
+  @for (item of listItems(); track item; let i = $index) {
+    <li>{{ item.name }} - <button (click)="deleteItem(i)">Delete</button></li>
+  }
+</ul>
